java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/UninitializedFields.java
public final class  A {
  <error descr="Field 'x' might not have been initialized">private final int x</error>, <error descr="Field 'y' might not have been initialized">y</error>;
}